[gd_scene load_steps=6 format=3 uid="uid://c7mjietsu22g4"]

[ext_resource type="Script" path="res://main.gd" id="1_2cl6c"]
[ext_resource type="PackedScene" uid="uid://rtkgn0ape442" path="res://levels/level_1.tscn" id="1_b4nis"]
[ext_resource type="PackedScene" uid="uid://cwruhhb60bwqq" path="res://objects/ship.tscn" id="2_5n43s"]
[ext_resource type="PackedScene" uid="uid://q88e8d5sjyc1" path="res://ui.tscn" id="4_pf7u8"]
[ext_resource type="Script" path="res://ui.gd" id="5_djvav"]

[node name="Main" type="Node"]
script = ExtResource("1_2cl6c")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.745098, 0.952941, 1)

[node name="LevelHolder" type="Node" parent="."]

[node name="Level1" parent="LevelHolder" instance=ExtResource("1_b4nis")]

[node name="Ship" parent="." instance=ExtResource("2_5n43s")]
position = Vector2(40, 215)

[node name="UI" parent="." instance=ExtResource("4_pf7u8")]
script = ExtResource("5_djvav")

[connection signal="main_next_level" from="Ship" to="." method="_on_ship_main_next_level"]
[connection signal="player_dead" from="Ship" to="." method="_on_ship_player_dead"]
[connection signal="update_health" from="Ship" to="UI" method="_on_ship_update_health"]
[connection signal="update_speed_ui" from="Ship" to="UI" method="_on_ship_update_speed_ui"]
[connection signal="update_turn_ui" from="Ship" to="UI" method="_on_ship_update_turn_ui"]
